--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-start",
+  "name": "@harvestapi/profile-search-scraper",
   "version": "0.0.1",
   "type": "module",
   "description": "This is an example of an Apify actor.",
