--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ storage/key_value_stores/*
 storage/key_value_stores/default/*
 !storage/key_value_stores/default/INPUT.json
 pnpm-lock.yaml
+src/temp
