--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
     "test": "echo \"Error: oops, the actor has no tests yet, sad!\" && exit 1"
   },
   "dependencies": {
-    "@harvestapi/scraper": "1.3.19",
+    "@harvestapi/scraper": "1.4.1",
     "apify": "3.4.2",
     "dotenv": "^16.5.0"
   },
   "devDependencies": {
     "@apify/eslint-config-ts": "^0.3.0",
     "@apify/tsconfig": "^0.1.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "22.13.4",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "10.1.2",
     "eslint-plugin-prettier": "5.2.6",
+    "fs-extra": "^11.3.0",
     "prettier": "3.5.3",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
